# sre-copilot

./: .gitignore  ARCHITECTURE.md  EVAL_RESULTS.md  LICENSE  README.md  architecture.mmd  pyproject.toml
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  PROJECT_STATUS.md
eval/: README.md
scripts/: generate_eval_set.py
src/: __init__.py
src/agent/: __init__.py  agent.py  boundaries.py  cli.py  corroboration.py  schema.py
src/eval/: __init__.py  cli.py  metrics.py  runner.py
src/incidents/: __init__.py  cli.py  fixtures.py  generator.py  loader.py  types.py
src/mcp_server/: __init__.py  server.py  tools.py
src/observability/: __init__.py  tracing.py
tests/: conftest.py  test_agent_basic.py  test_boundaries.py  test_incident_generator.py  test_schema.py
